update images src path

--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
   <body>
     <main class="product-card">
       <img
-        src="/images/image-product-mobile.jpg"
+        src="images/image-product-mobile.jpg"
         alt="eau de parfum"
         class="image_mobile"
       >
       <img
-        src="/images/image-product-desktop.jpg"
+        src="./images/image-product-desktop.jpg"
         alt="eau de parfum"
         class="image_desktop"
       >
@@ -52,7 +52,7 @@
           <span class="old"> $169.99 </span>
         </div>
         <button class="button-text" type="button">
-          <img class="cart-icon" src="/images/icon-cart.svg" alt="cart">
+          <img class="cart-icon" src="images/icon-cart.svg" alt="cart">
           <span> Add to Cart </span>
         </button>
       </div>
